--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -83,11 +83,13 @@
 				<div id="owl-demo" class="owl-carousel owl-theme">
 					<div class="item">
 						<div class="biseller-column">
-							<p></p>
+							<p id = "degrees"></p>
 							<a class="lightbox" href="#">
 								<img src="/img/1.png" alt=""/>
 							</a> 
-							<p id = "degrees">20<sup class="degree">°</sup></p>
+							<p>Weather currently:  <p id = "weatherCurrently"></p></p>
+                            <p>Description of Weather: <p id = "descriptionOfWeather"></p></p>
+                            <p>Humidity: <p id = "humidity"></p></p>
 						</div>
 					</div>  
 				</div>  
