--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -291,7 +291,7 @@
 					<div class="item">
 						<div class="biseller-column">
                             <p id = "todayLocation"></p>
-							<a class="lightbox" href="#">
+							<a class="lightbox" href="https://openweathermap.org/city">
 								<img id = "weatherImage" src="" alt=""/>
 							</a>
                             <p id = "todayDegrees"></p> 
@@ -384,5 +384,6 @@
 		}
 	</script>
 	<script src = "/js/ClientSideWeatherApp.js"></script>
+    <script src = "/js/TimeForLocation.js"></script>
 </body>
 </html>
