Removing Url from page on image

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -291,7 +291,7 @@
 					<div class="item">
 						<div class="biseller-column">
                             <p id = "todayLocation"></p>
-							<a class="lightbox" href="https://openweathermap.org/city">
+							<a class="lightbox">
 								<img id = "weatherImage" src="" alt=""/>
 							</a>
                             <p id = "todayDegrees"></p> 
