--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -36,7 +36,7 @@
 					<h3 id = "degrees"><sup class="degree">°</sup><span>C</span></h3>
 					<p id = "location"></p>
                         <form>
-                            <input id = "cityName" placeholder="Location">
+                            <input id = "cityName" placeholder="Location" required>
                             <p></p>
                             <select id = 'countryCode'>
                             <!-- Countries often selected by users can be moved to the top of the list. -->
@@ -262,6 +262,7 @@
                             <button>Search</button>
                         </form>
 						<div class="date-time">
+                                <div id = "timetxt">Please Search for a City: </div>
 								<div id="txt"></div>
 							<div class="clear"></div>
 						</div>  
